[package]
name = "surreal-neon-test"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# surrealdb = {version = "1.0.0-beta.9", features = ["kv-mem", "kv-rocksdb"]}
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", features = ["kv-mem", "kv-rocksdb"] }
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
once_cell = "1.18.0"
serde = "1.0.171"
serde_json = "1.0.103"


[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "task-api", "channel-api", "promise-api"]
